# MailSiftAppStructured

./: .env.example  .gitignore  ai_intelligence.py  api_v2.py  app.py  file_parsing.py  payments.py  pyproject.toml  requirements.txt  server.py  server_v2.py  subscription_system.py
Downloads/MailSiftAppStructured/: .env  .env.example  BUILD_DESKTOP.md  Dockerfile  app.py  docker-compose.yml  gui.py  payments.py  requirements.txt  server.py
Downloads/MailSiftAppStructured/.github/workflows/: desktop-release.yml
Downloads/MailSiftAppStructured/templates/: admin_metrics.html  admin_payments.html  admin_settings.html  index.html  paywall.html
tests/: test_app_routes.py  test_extraction.py  test_payments.py  test_public_api.py  test_url_extract.py
