[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailsift"
version = "0.1.0"
description = "MailSift — smart email extractor"
readme = "README.md"
requires-python = ">=3.11"
authors = [ { name = "MailSift contributors" } ]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C", "ANN", "C90"]
ignore = []
